Add more config
ViewerPort, RedirectPort, RemoteIP

--- a/host/BinDebug/config.ini
+++ b/host/BinDebug/config.ini
@@ -5,13 +5,22 @@ WOWArg=-w -launch
 ;WOWPath=E:\game\Diablo III Beta 8815\Diablo III.exe
 ;WOWArg=-w -launch --auroraaddress 192.168.1.101:1345
 
-;数据路径, 可不填写, 如果填写, 自动读取数据
-;DataPath=D:\TCCN-3.3.3-Trinity7711\wow_server
-;iplist=127.0.0.1:3724
-
 ;目标进程类名
 UserDefineClassName=D3 Main Window Class
+
 ;监控进程类名
 ViewerDefineClassName=TMiddleManFrm
-;监控进程监听端口
+
+;监控进程转发端口
+RedirectPort=34889
+
+;监控进程监听端口 (不指定则通过WM_COPYDATA传输）
 ViewerPort=34888
+
+;远程IP (连接到第三方程序时使用，必须同时指定ViewerPort）
+RemoteIP=192.168.1.102
+;RemoteIP=127.0.0.1
+
+;数据路径, 可不填写, 如果填写, 自动读取数据 （未实现）
+;DataPath=D:\TCCN-3.3.3-Trinity7711\wow_server
+;iplist=127.0.0.1:3724
